--- a/third_part_apps.html
+++ b/third_part_apps.html
@@ -10,30 +10,15 @@
       </a>
     </div>
 
-  <div class="row">
-    <a class="box-link" href="link">
-      Tiger Center
-    </a>
+    <div class="row">
+      <a class="box-link" href="third_party_apps/cengage.html">
+        Cengage
+      </a>
 
-    <a class="box-link", href="link">
-      Tutoring
-    </a>
-
-  </div>
-  
-  <div class="row">
-    <a class="box-link" href="link">
-      MyCourses
-    </a>
-
-    <a class="box-link" href="link">
-      Starfish
-    </a>
-  </div>
-
- 
-  </div>
-
+      <a class="box-link" href="tigercenter.html">
+        Canvas
+      </a>
+    </div>
 </body>
 </html>
 <!DOCTYPE html>
