--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <img src="https://www.rit.edu/brandportal/sites/rit.edu.brandportal/files/2020-04/new_RIT_logo1_k.png" alt="Clickable image" width="210">
       </a>
     </div>
+  
   <div class="row">
-    <a class="box-link">
+    <a class="box-link" href="recreation.html">
       Recreation
     </a>
 
-    <a class="box-link">
+    <a class="box-link", href="information.html">
       Information
     </a>
     
@@ -24,11 +25,11 @@
   </div> 
 
   <div class="row">
-    <a class="box-link">
+    <a class="box-link" href="third_part_apps.html">
       3rd Party Apps
     </a>
 
-    <a class="box-link">
+    <a class="box-link" href="security.html">
       Security
     </a>
 
