More thursday work

--- a/academic.html
+++ b/academic.html
@@ -11,22 +11,22 @@
     </div>
 
   <div class="row">
-    <a class="box-link" href="link">
+    <a class="box-link" href="academic/tigercenter.html">
       Tiger Center
     </a>
 
-    <a class="box-link", href="link">
+    <a class="box-link", href="academic/tutoring.html">
       Tutoring
     </a>
 
   </div>
-  
+
   <div class="row">
-    <a class="box-link" href="link">
+    <a class="box-link" href="academic/mycourses.html">
       MyCourses
     </a>
 
-    <a class="box-link" href="link">
+    <a class="box-link" href="academic/starfish.html">
       Starfish
     </a>
   </div>
