--- a/academic/tutoring.html
+++ b/academic/tutoring.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body{
-            background-image: url("../images/cengage.png");
+            background-image: url("../images/tutoring.png");
             background-size: cover;
             }
     </style>
