--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Security
     </a>
 
-    <a class="box-link">  
+    <a class="box-link" href="support.html">
       Support
     </a>
   </div>
