--- a/third_part_apps.html
+++ b/third_part_apps.html
@@ -15,7 +15,7 @@
         Cengage
       </a>
 
-      <a class="box-link" href="tigercenter.html">
+      <a class="box-link" href="third_party_apps/canvas.html">
         Canvas
       </a>
     </div>
