--- a/recreation/campusgroups.html
+++ b/recreation/campusgroups.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body{
-            background-image: url("../images/cengage.png");
+            background-image: url("../images/campusgroups.png");
             background-size: cover;
             }
     </style>
