--- a/information.html
+++ b/information.html
@@ -9,6 +9,30 @@
         <img src="https://www.rit.edu/brandportal/sites/rit.edu.brandportal/files/2020-04/new_RIT_logo1_k.png" alt="Clickable image" width="210">
       </a>
     </div>
+  
+  <div class="row">
+    <a class="box-link" href="information/sis.html">
+      SIS
+    </a>
+
+    <a class="box-link", href="information/dining_hours.html">
+      Dining Hours
+    </a>
+    
+    <a class="box-link" href="information/lab_hours.html">
+      Lab Hours
+    </a>
+  </div> 
+
+  <div class="row">
+    <a class="box-link" href="information/parking.html">
+      Parking
+    </a>
+
+    <a class="box-link" href="information/calendar.html">
+      Calendar
+    </a>
+  </div>
+
 </body>
 </html>
-<!DOCTYPE html>
