--- a/security.html
+++ b/security.html
@@ -9,6 +9,16 @@
         <img src="https://www.rit.edu/brandportal/sites/rit.edu.brandportal/files/2020-04/new_RIT_logo1_k.png" alt="Clickable image" width="210">
       </a>
     </div>
+
+    <div class="row">
+      <a class="box-link" href="security/duo.html">
+        Duo
+      </a>
+
+      <a class="box-link" href="security/tigersafe.html">
+        TigerSafe
+      </a>
+    </div>
 </body>
 </html>
 <!DOCTYPE html>
