--- a/support.html
+++ b/support.html
@@ -9,6 +9,20 @@
         <img src="https://www.rit.edu/brandportal/sites/rit.edu.brandportal/files/2020-04/new_RIT_logo1_k.png" alt="Clickable image" width="210">
       </a>
     </div>
+
+    <div class="row">
+    <a class="box">
+      IT/maintenance phone: 585-475-5000
+    </a>
+
+    <a class="box">
+      <img src="../images/chat.png">
+    </a>
+
+    <a class="box-link" href="support/mylife.html">
+      MyLife
+    </a>
+  </div>
 </body>
 </html>
 <!DOCTYPE html>
