--- a/information/sis.html
+++ b/information/sis.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body{
-            background-image: url("../images/campusgroups.png");
+            background-image: url("../images/sis.png");
             background-size: cover;
             }
     </style>
