--- a/support/duo.html
+++ b/support/duo.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body{
-            background-image: url("../images/dining_hours.png");
+            background-image: url("../images/mylife.png");
             background-size: cover;
             }
     </style>
