--- a/information/lab_hours.html
+++ b/information/lab_hours.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body{
-            background-image: url("../images/campusgroups.png");
+            background-image: url("../images/lab_hours.png");
             background-size: cover;
             }
     </style>
