Fixed chat.png to load on website

--- a/support.html
+++ b/support.html
@@ -15,8 +15,8 @@
       IT/maintenance phone: 585-475-5000
     </a>
 
-    <a class="box">
-      <img src="../images/chat.png">
+    <a class="image">
+      <img src="images/chat.png">
     </a>
 
     <a class="box-link" href="support/mylife.html">
